remove prepended number from test name
Signed-off-by: Mark McCormick <mark.mccormick@chainguard.dev>